--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cast"
   ],
   "dependencies": {
+    "@naholyr/srt2vtt": "^1.3.1",
     "array-loop": "^1.0.0",
     "castv2-client": "^1.1.0",
     "chalk": "1.0.0",
@@ -46,7 +47,6 @@
     "range-parser": "^1.0.2",
     "read-torrent": "^1.0.0",
     "router": "^0.6.2",
-    "srt2vtt": "^1.2.0",
     "stream-transcoder": "0.0.5",
     "xml2js": "^0.4.4",
     "xtend": "^4.0.0"
