--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "castnow",
-  "version": "0.4.14",
+  "name": "@naholyr/castnow",
+  "version": "0.4.15",
   "description": "commandline chromecast player",
   "main": "index.js",
   "bin": {
